--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+--- v1.2 (May 2, 2009)
+Added NES fourscore support. When a fourscore is detected in port 1, fourscore
+mode is entered and ports 1 and 2 are used to read up to 4 NES controllers.
+
 --- v1.1 (18 Apr 2007)
 - Changed report descriptor. There are now four separate report IDs, one
 per controller. This was necessary because even though all axis and buttons
